# csv-report-cli

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml  stats1.csv  test_stats1.csv
output/: __init__.py  output.py
reader/: __init__.py  reader.py
report/: __init__.py  report.py
tests/: test_reader.py  test_report.py
