[project]
name = "csv-parser"
version = "0.1.0"
description = "CLI-приложение для обработки CSV-файлов с метриками видео на YouTube."
authors = [
    { name = "vadim", email = "lzaitsev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tabulate (>=0.10.0,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.11,<0.16.0)"
]
